# Easel

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  package.json
.cargo/: config.toml
.zed/: settings.json
config/: development.yaml  test.yaml
config/.zed/: settings.json
examples/: playground.rs
frontend/: oxfmt.config.ts  oxlint.config.ts  package.json  rsbuild.config.ts  tsconfig.json  uno.config.ts
frontend/src/: App.vue  env.d.ts  index.css  index.ts
frontend/src/components/dashboard/: DashCard.vue  DashGrid.vue
frontend/src/components/sidebar/: Sidebar.vue  SidebarLink.vue
frontend/src/components/ui/: Loading.vue  UnderConstruction.vue
frontend/src/layouts/: BaseLayout.vue
frontend/src/lib/: router.ts
frontend/src/lib/mock/: course.ts
frontend/src/lib/models/: course.ts
frontend/src/pages/: Home.vue  Notifications.vue
frontend/src/pages/calendar/: Calendar.vue  CalendarItem.vue
frontend/src/pages/courses/: CourseAnnouncements.vue  CourseAssignment.vue  CourseAssignments.vue  CourseGrade.vue  CourseGrades.vue  CourseHome.vue  CourseList.vue  CoursePage.vue  CoursePages.vue  CourseQuiz.vue
frontend/src/pages/messages/: ComposeMessage.vue  Inbox.vue
frontend/src/pages/settings/: DataExport.vue  SessionList.vue  SettingsHome.vue
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_users.rs  m20260511_203252_courses.rs  m20260511_204100_enrollments.rs  m20260511_210021_add_description_to_courses.rs  m20260511_212010_add_settings_to_course.rs  m20260511_212423_assignments.rs  m20260511_212652_course_pages.rs  m20260511_214101_submissions.rs  m20260511_215008_add_course_ref_to_assignments.rs  m20260511_215047_add_owner_ref_to_courses.rs  m20260511_215151_add_home_page_ref_to_courses.rs  m20260511_215210_add_syllabus_page_ref_to_courses.rs  util.rs
src/: app.rs  lib.rs  openapi.rs
src/controllers/: assignment.rs  auth.rs  course.rs  course_page.rs  enrollment.rs  mod.rs  submission.rs
src/dev/: handler.rs  mod.rs  state.rs  ws.rs
src/models/: assignments.rs  course_pages.rs  courses.rs  enrollments.rs  mod.rs  perms.rs  submissions.rs  users.rs
src/models/_entities/: assignments.rs  course_pages.rs  courses.rs  enrollments.rs  mod.rs  prelude.rs  submissions.rs  users.rs
src/views/: auth.rs
tests/models/: enrollments.rs  mod.rs  users.rs
tests/requests/: assignment.rs  auth.rs  course.rs  course_page.rs  enrollment.rs  mod.rs  prepare_data.rs  submission.rs
