[workspace]
resolver = "3"
exclude = ["thirdparty"]

[package]
name = "easel"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "easel-cli"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16" }
sea-orm = { path = "./thirdparty/sea-orm" }
sea-orm-migration = { path = "./thirdparty/sea-orm/sea-orm-migration" }

[dependencies]
# Loco Base
loco-rs = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = ["process", "rt-multi-thread"] }
async-trait = { version = "0.1" }
axum = { version = "0.8", features = ["ws"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
chrono = "0.4"
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }

# Typing & serialization
enumflags2 = { version = "0.7.12", features = ["serde", "std"] }
facet = { version = "0.46.2", features = ["chrono", "uuid"] }
specta = { version = "2.0.0-rc.25", features = ["derive", "collect", "chrono", "uuid"] }
specta-typescript = "0.0.12"
specta-serde = "0.0.12"
specta-zod = "0.0.3"
reqwest = { version = "0.13.3", default-features = false, features = [
    "json",
    "rustls",
    "stream",
    "query",
    "form",
] }
hyper = "1.9.0"
tokio-tungstenite = { version = "0.29.0", features = ["rustls"] }
tungstenite = { version = "0.29.0", features = ["rustls"] }
futures-util = "0.3.32"
url = "2.5.8"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
utoipa = { version = "5.5.0", features = ["uuid", "axum_extras", "chrono"] }
cruet = "1.0.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[[bin]]
name = "easel-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }

[package.metadata.db.entity]
model_extra_derives = "facet::Facet,specta::Type,utoipa::ToSchema,utoipa::ToResponse"
model_extra_attributes = "schema(as = {{name}})"
enum_extra_derives = "facet::Facet,specta::Type,utoipa::ToSchema,utoipa::ToResponse"
enum_extra_attributes = "repr(u16)"

[patch.crates-io]
sea-orm = { path = "./thirdparty/sea-orm" }
sea-orm-migration = { path = "./thirdparty/sea-orm/sea-orm-migration" }
